--- a/소개.html
+++ b/소개.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 </haed>
 <body>
-    <h1><a href="pre.html">sonamoo</a></h1>
-    <li><a href="pre.html">뒤로가기</a>
+    <h1><a href="index.html">sonamoo</a></h1>
+    <li><a href="index.html">뒤로가기</a>
   
   </body>
